# openapi_server/models/response_uploadtocould_model.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class ResponseUploadToCloudModel(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, code=None, encrypt_str=None):  # noqa: E501
+        """ResponseUploadToCloudModel - a model defined in OpenAPI
+
+        :param code: The code of this ResponseUploadToCloudModel.  # noqa: E501
+        :type code: int
+        :param encrypt_str: The encrypt_str of this ResponseUploadToCloudModel.  # noqa: E501
+        :type encrypt_str: str
+        """
+        self.openapi_types = {
+            'code': int,
+            'encrypt_str': str
+        }
+
+        self.attribute_map = {
+            'code': 'code',
+            'encrypt_str': 'encrypt_str'
+        }
+
+        self._code = code
+        self._encrypt_str = encrypt_str
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ResponseUploadToCloudModel':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ResponseUploadToCloudModel of this ResponseUploadToCloudModel.  # noqa: E501
+        :rtype: ResponseUploadToCloudModel
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def code(self):
+        """Gets the code of this ResponseUploadToCloudModel.
+
+
+        :return: The code of this ResponseUploadToCloudModel.
+        :rtype: int
+        """
+        return self._code
+
+    @code.setter
+    def code(self, code):
+        """Sets the code of this ResponseUploadToCloudModel.
+
+
+        :param code: The code of this ResponseUploadToCloudModel.
+        :type code: int
+        """
+
+        self._code = code
+
+    @property
+    def encrypt_str(self):
+        """Gets the encrypt_str of this ResponseUploadToCloudModel.
+
+
+        :return: The encrypt_str of this ResponseUploadToCloudModel.
+        :rtype: str
+        """
+        return self._encrypt_str
+
+    @encrypt_str.setter
+    def encrypt_str(self, encrypt_str):
+        """Sets the encrypt_str of this ResponseUploadToCloudModel.
+
+
+        :param encrypt_str: The encrypt_str of this ResponseUploadToCloudModel.
+        :type encrypt_str: str
+        """
+
+        self._encrypt_str = encrypt_str
